--- a/HardStrategyPAttern/HardStrategyPAttern.csproj
+++ b/HardStrategyPAttern/HardStrategyPAttern.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{204ABA59-2908-472E-97C6-88E4977CB5D8}</ProjectGuid>
+    <ProjectGuid>{2B6E4929-1833-41CB-B1CA-48B0EA4D8B4A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>StrategyPattern</RootNamespace>
-    <AssemblyName>StrategyPattern</AssemblyName>
+    <RootNamespace>HardStrategyPAttern</RootNamespace>
+    <AssemblyName>HardStrategyPAttern</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,19 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Car.cs" />
-    <Compile Include="Explorer.cs" />
-    <Compile Include="Fly.cs" />
+    <Compile Include="AbsArray.cs" />
+    <Compile Include="BubbleSort.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="IMoveble.cs" />
+    <Compile Include="IArrayController.cs" />
+    <Compile Include="MyArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Walk.cs" />
+    <Compile Include="Randomator.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
